Nearly done with contact form, need to fix error. Made a Carousel of testimonial abbreviations, needs links to jump to full.

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   max-width: 100vw;
+  margin-bottom: 20px !important;
 }
 
 ul {
